--- a/test.html
+++ b/test.html
@@ -1,137 +1,200 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title>鍾拔榮退感恩茶會</title>
+	<meta charset="utf-8">
+	<title>鍾拔榮退感恩茶會</title>
+	<style>
+		a:link,
+		a:visited {
+			background-color: #6dbe5d;
+			color: white;
+			padding: 4px 12px;
+			text-align: center;
+			text-decoration: none;
+			display: inline-block;
+		}
+
+		a:hover,
+		a:active {
+			background-color: rgb(16, 97, 13);
+		}
+	</style>
 </head>
-<body >
-<h2>鍾拔榮退感恩茶會</h2>
-<h3>Step 1:選擇相框(直向 or 橫向) </h3>
 
-<div>
-	<input type="button" id = "one" style="background-image:url('0113_3.png');background-size: 116px 76px;background-position: 0px 0.5px ;width:120px;height:80px;">
-	<input type="button" id = "three" style="background-image:url('0113_2.png');background-size: 116px 78px;background-position: 0px 1px ;width:120px;height:80px;">
-</div>
-<br>
-<div>
-	<input type="button" id = "five" style="background-image:url('0113_7.png');background-size: 116px 76px;background-position: 0px 0px ;width:120px;height:80px;">
-	<input type="button" id = "six" style="background-image:url('0113_8.png');background-size: 116px 78px;background-position: 0px 0px ;width:120px;height:80px;">
+<body>
+	<h2>鍾拔榮退感恩茶會</h2>
+	<h3>Step 1:選擇相框(直向 or 橫向) </h3>
 
-</div>
+	<div>
+		<input type="button" id="one"
+			style="background-image:url('0113_3.png');background-size: 116px 76px;background-position: 0px 0.5px ;width:120px;height:80px;">
+		<input type="button" id="three"
+			style="background-image:url('0113_2.png');background-size: 116px 78px;background-position: 0px 1px ;width:120px;height:80px;">
+	</div>
+	<br>
+	<div>
+		<input type="button" id="five"
+			style="background-image:url('0113_7.png');background-size: 116px 76px;background-position: 0px 0px ;width:120px;height:80px;">
+		<input type="button" id="six"
+			style="background-image:url('0113_8.png');background-size: 116px 78px;background-position: 0px 0px ;width:120px;height:80px;">
 
-<br>
-<div>
-	<input type="button" id = "two" style="background-image:url('0113_5.png');background-size: 79px 116px;background-position: 1px 0px ;width:80px;height:120px;">
-	<input type="button" id = "four" style="background-image:url('0113_4.png');background-size: 77px 116px;background-position: 0px 0px ;width:80px;height:120px;">
-</div>
+	</div>
 
-<br>
-<h3>Step 2:上傳照片 </h3>
-<div>
-  <div class="inputoutput">
-    <img id="imageSrc" style="display:none" />
-    <div class="caption" > <input type="file" id="fileInput" name="file" /></div>
-	<a href="#" download="image.png" onclick="this.href=outputCanvas.toDataURL();" >下載圖片</a>
-	
-  </div>
-  <canvas id="outputCanvas" style="display:none"></canvas>
-  <canvas id="display_outputCanvas" ></canvas>
-</div>
-<script type="text/javascript">
-let imgElement = document.getElementById("imageSrc") ;
-let output = document.getElementById("outputCanvas") ;
-let inputElement = document.getElementById("fileInput");
-let display_output = document.getElementById("display_outputCanvas") ;
+	<br>
+	<div>
+		<input type="button" id="two"
+			style="background-image:url('0113_5.png');background-size: 79px 116px;background-position: 1px 0px ;width:80px;height:120px;">
+		<input type="button" id="four"
+			style="background-image:url('0113_4.png');background-size: 77px 116px;background-position: 0px 0px ;width:80px;height:120px;">
+	</div>
 
-let one_button = document.querySelector("#one"); 
-let two_button = document.querySelector("#two"); 
-let three_button = document.querySelector("#three"); 
-let four_button = document.querySelector("#four"); 
-let five_button = document.querySelector("#five"); 
-let six_button = document.querySelector("#six"); 
+	<br>
+	<h3>Step 2:上傳照片 </h3>
+	<div>
+		<div class="inputoutput">
+			<img id="imageSrc" style="display:none" />
+			<div class="caption">
+				<input type="file" id="fileInput" name="file" />
+				<a href="#" download="image.png" onclick="this.href=outputCanvas.toDataURL();">下載圖片</a>
+			</div>
+		</div>
+		<br>
+		<canvas id="outputCanvas" style="display:none"></canvas>
+		<canvas id="display_outputCanvas"></canvas>
+	</div>
+	<script type="text/javascript">
+		let imgElement = document.getElementById("imageSrc");
+		let output = document.getElementById("outputCanvas");
+		let inputElement = document.getElementById("fileInput");
+		let display_output = document.getElementById("display_outputCanvas");
 
-
-inputElement.addEventListener("change", (e) => {
-  imgElement.src = URL.createObjectURL(e.target.files[0]);
-}, false);
-
-var img = new Image();
-
-img.src = "0113_3.png" ;
-
-var width = 240 ;
-var height = 160 ;
-
-one_button.addEventListener("click", (e) => {
-	img.src = "0113_3.png" ;
-	width = 240 ;
-	height = 160 ;
-});
-
-two_button.addEventListener("click", (e) => {
-	img.src = "0113_5.png" ;
-	width = 160 ;
-	height = 240 ;
-});
-
-three_button.addEventListener("click", (e) => {
-	img.src = "0113_2.png" ;
-	width = 240 ;
-	height = 160 ;
-});
-
-four_button.addEventListener("click", (e) => {
-	img.src = "0113_4.png" ;
-	width = 160 ;
-	height = 240 ;
-});
-
-five_button.addEventListener("click", (e) => {
-	img.src = "0113_7.png" ;
-	width = 240 ;
-	height = 160 ;
-});
-
-six_button.addEventListener("click", (e) => {
-	img.src = "0113_8.png" ;
-	width = 240 ;
-	height = 160 ;
-});
+		let one_button = document.querySelector("#one");
+		let two_button = document.querySelector("#two");
+		let three_button = document.querySelector("#three");
+		let four_button = document.querySelector("#four");
+		let five_button = document.querySelector("#five");
+		let six_button = document.querySelector("#six");
 
 
-imgElement.onload = function() { 
+		inputElement.addEventListener("change", (e) => {
+			imgElement.src = URL.createObjectURL(e.target.files[0]);
+		}, false);
 
-  let mat = cv.imread(imgElement);
-  
-  var back_img = new Image();
+		var img = new Image();
 
-  back_img.src = imgElement.src ;
+		img.src = "0113_3.png";
 
-  var ctx = output.getContext('2d');
-  var display_ctx = display_output.getContext('2d');
-  output.width = imgElement.width ;
-  output.height = imgElement.height;  
-  ctx.rect(0,0,output.width,output.height);
- 
-  display_output.width = width ;
-  display_output.height = height ;  
-  display_ctx.rect(0,0,display_output.width,display_output.height);
+		var width = 240;
+		var height = 160;
 
-  
-  cv.imshow("outputCanvas", mat);  
-  ctx.drawImage(img,0,0,imgElement.width,imgElement.height);
+		one_button.addEventListener("click", (e) => {
+			img.src = "0113_3.png";
+			width = 240;
+			height = 160;
+			one_button.style.border = '4px red solid';
+			two_button.style.border = '1px black solid';
+			three_button.style.border = '1px black solid';
+			four_button.style.border = '1px black solid';
+			five_button.style.border = '1px black solid';
+			six_button.style.border = '1px black solid';
+		});
 
- 
-  display_ctx.drawImage(back_img,0,0,display_output.width,display_output.height); 
-  display_ctx.drawImage(img,0,0,display_output.width,display_output.height); 
+		two_button.addEventListener("click", (e) => {
+			img.src = "0113_5.png";
+			width = 160;
+			height = 240;
+			one_button.style.border = '1px black solid';
+			two_button.style.border = '4px red solid';
+			three_button.style.border = '1px black solid';
+			four_button.style.border = '1px black solid';
+			five_button.style.border = '1px black solid';
+			six_button.style.border = '1px black solid';
+		});
 
-  
-  
-}
+		three_button.addEventListener("click", (e) => {
+			img.src = "0113_2.png";
+			width = 240;
+			height = 160;
+			one_button.style.border = '1px black solid';
+			two_button.style.border = '1px black solid';
+			three_button.style.border = '4px red solid';
+			four_button.style.border = '1px black solid';
+			five_button.style.border = '1px black solid';
+			six_button.style.border = '1px black solid';
+		});
 
-</script>
+		four_button.addEventListener("click", (e) => {
+			img.src = "0113_4.png";
+			width = 160;
+			height = 240;
+			one_button.style.border = '1px black solid';
+			two_button.style.border = '1px black solid';
+			three_button.style.border = '1px black solid';
+			four_button.style.border = '4px red solid';
+			five_button.style.border = '1px black solid';
+			six_button.style.border = '1px black solid';
+		});
 
-<script src="opencv.js" type="text/javascript"></script>
+		five_button.addEventListener("click", (e) => {
+			img.src = "0113_7.png";
+			width = 240;
+			height = 160;
+			one_button.style.border = '1px black solid';
+			two_button.style.border = '1px black solid';
+			three_button.style.border = '1px black solid';
+			four_button.style.border = '1px black solid';
+			five_button.style.border = '4px red solid';
+			six_button.style.border = '1px black solid';
+		});
+
+		six_button.addEventListener("click", (e) => {
+			img.src = "0113_8.png";
+			width = 240;
+			height = 160;
+			one_button.style.border = '1px black solid';
+			two_button.style.border = '1px black solid';
+			three_button.style.border = '1px black solid';
+			four_button.style.border = '1px black solid';
+			five_button.style.border = '1px black solid';
+			six_button.style.border = '4px red solid';
+		});
+
+
+		imgElement.onload = function () {
+
+			let mat = cv.imread(imgElement);
+
+			var back_img = new Image();
+
+			back_img.src = imgElement.src;
+
+			var ctx = output.getContext('2d');
+			var display_ctx = display_output.getContext('2d');
+			output.width = imgElement.width;
+			output.height = imgElement.height;
+			ctx.rect(0, 0, output.width, output.height);
+
+			display_output.width = width;
+			display_output.height = height;
+			display_ctx.rect(0, 0, display_output.width, display_output.height);
+
+
+			cv.imshow("outputCanvas", mat);
+			ctx.drawImage(img, 0, 0, imgElement.width, imgElement.height);
+
+
+			display_ctx.drawImage(back_img, 0, 0, display_output.width, display_output.height);
+			display_ctx.drawImage(img, 0, 0, display_output.width, display_output.height);
+
+
+
+		}
+
+	</script>
+
+	<script src="opencv.js" type="text/javascript"></script>
 
 </body>
+
 </html>
